[gd_scene load_steps=24 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://tiles/outdoors_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Entities.gd" type="Script" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://items/armor/LeatherArmor.tscn" type="PackedScene" id=6]
[ext_resource path="res://items/weapon/Bow.tscn" type="PackedScene" id=7]
[ext_resource path="res://items/Skill.tscn" type="PackedScene" id=8]
[ext_resource path="res://Camera2D.gd" type="Script" id=9]
[ext_resource path="res://TestLight.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/lights/DitherLight256.png" type="Texture" id=11]
[ext_resource path="res://sprites/lights/light256core.png" type="Texture" id=12]
[ext_resource path="res://Stronghold.tscn" type="PackedScene" id=13]
[ext_resource path="res://Loot.tscn" type="PackedScene" id=14]
[ext_resource path="res://items/component/FireGem.tscn" type="PackedScene" id=15]
[ext_resource path="res://GUI.gd" type="Script" id=16]
[ext_resource path="res://HUD.gd" type="Script" id=17]
[ext_resource path="res://sprites/icon.png" type="Texture" id=18]
[ext_resource path="res://PlayerInventory.tscn" type="PackedScene" id=19]
[ext_resource path="res://CharacterControl.gd" type="Script" id=20]

[sub_resource type="Animation" id=1]
resource_name = "Flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.999999 ),
"update": 1,
"values": [ Vector2( 0, -1 ), Vector2( -1, 0 ), Vector2( 0, 1 ), Vector2( 0, -1 ), Vector2( 1, -1 ), Vector2( 0, 0 ), Vector2( -1, -1 ), Vector2( -1, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 1, -1 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.643137, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.670588, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.12549, 0.12549, 0.12549, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]
script = ExtResource( 2 )
map_width = 4000
map_height = 4000
grass_threshold = -0.13
water_threshold = -0.2

[node name="Environment" type="TileMap" parent="World"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 262154, 0, 0, 262155, 0, 1, 262156, 0, 1, 262157, 0, 2, 327690, 0, 131072, 327691, 0, 131073, 327692, 0, 131073, 327693, 0, 131074, 327694, 0, 0, 327695, 0, 1, 327696, 0, 2, 327700, 0, 0, 327701, 0, 2, 393225, 0, 0, 393226, 0, 2, 393230, 0, 65536, 393231, 0, 65540, 393232, 0, 131074, 393234, 0, 0, 393235, 0, 1, 393236, 0, 3, 393237, 0, 65538, 458759, 0, 0, 458760, 0, 1, 458761, 0, 3, 458762, 0, 65538, 458766, 0, 131072, 458767, 0, 131074, 458770, 0, 65536, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 4, 458774, 0, 2, 524295, 0, 65536, 524296, 0, 65540, 524297, 0, 131073, 524298, 0, 131074, 524303, 3, 0, 524304, 3, 2, 524306, 0, 65536, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65538, 589831, 0, 131072, 589832, 0, 131074, 589839, 3, 65536, 589840, 3, 65538, 589842, 0, 65536, 589843, 0, 65537, 589844, 0, 65540, 589845, 0, 131073, 589846, 0, 131074, 655369, 0, 0, 655370, 0, 1, 655371, 0, 2, 655375, 3, 65536, 655376, 3, 65538, 655377, 0, 0, 655378, 0, 3, 655379, 0, 65537, 655380, 0, 65538, 720902, 0, 65537, 720905, 0, 131072, 720906, 0, 131073, 720907, 0, 131074, 720911, 3, 131072, 720912, 3, 131074, 720913, 0, 131072, 720914, 0, 65539, 720915, 0, 65537, 720916, 0, 4, 720917, 0, 2, 786450, 0, 131072, 786451, 0, 65539, 786452, 0, 65540, 786453, 0, 131074, 851987, 0, 131072, 851988, 0, 131074, 917510, 0, 0, 917511, 0, 1, 917512, 0, 2, 917521, 0, 0, 917522, 0, 2, 917524, 3, 0, 917525, 3, 1, 917526, 3, 2, 917527, 3, 65537, 983045, 0, 0, 983046, 0, 131076, 983047, 0, 131073, 983048, 0, 131074, 983057, 0, 131072, 983058, 0, 131075, 983059, 0, 2, 983060, 3, 131072, 983061, 3, 131073, 983062, 3, 131074, 1048581, 0, 131072, 1048582, 0, 131074, 1048594, 0, 65536, 1048595, 0, 4, 1048596, 0, 2, 1114130, 0, 131072, 1114131, 0, 131073, 1114132, 0, 131074 )

[node name="Background" type="ColorRect" parent="World/Environment"]
show_behind_parent = true
margin_right = 676.0
margin_bottom = 482.0
mouse_filter = 2
color = Color( 0.937255, 0.803922, 0.678431, 1 )

[node name="Entities" type="YSort" parent="World"]
script = ExtResource( 4 )

[node name="Player" parent="World/Entities" instance=ExtResource( 5 )]
position = Vector2( 364.424, 310.973 )

[node name="Entity" parent="World/Entities/Player" index="1"]
editor/display_folded = true

[node name="Armor" parent="World/Entities/Player/Entity/Equipment" index="0"]
editor/display_folded = true
position = Vector2( 0, -4 )

[node name="Leather Armor" parent="World/Entities/Player/Entity/Equipment/Armor" index="0" instance=ExtResource( 6 )]
type = ""

[node name="Weapon" parent="World/Entities/Player/Entity/Equipment" index="3"]
editor/display_folded = true
position = Vector2( 0, -4 )

[node name="Bow" parent="World/Entities/Player/Entity/Equipment/Weapon" index="0" instance=ExtResource( 7 )]

[node name="Skill1" parent="World/Entities/Player/Entity/Equipment" index="4"]
editor/display_folded = true
visible = false

[node name="Skill" parent="World/Entities/Player/Entity/Equipment/Skill1" index="0" instance=ExtResource( 8 )]

[node name="Skill2" parent="World/Entities/Player/Entity/Equipment" index="5"]
visible = false

[node name="Camera2D" type="Camera2D" parent="World/Entities/Player"]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
script = ExtResource( 9 )

[node name="Node2D2" parent="World/Entities/Player" instance=ExtResource( 10 )]
visible = false
position = Vector2( 0.49118, 0.37271 )

[node name="Light2D" parent="World/Entities/Player/Node2D2" index="0"]
editor/display_folded = true
texture = ExtResource( 11 )
texture_scale = 2.0
color = Color( 0.992157, 0.960784, 0.815686, 1 )
shadow_enabled = true
shadow_buffer_size = 1024
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 10.0

[node name="Node2D3" parent="World/Entities/Player" instance=ExtResource( 10 )]
position = Vector2( 0.49118, 0.37271 )

[node name="Light2D" parent="World/Entities/Player/Node2D3" index="0"]
texture = ExtResource( 12 )
texture_scale = 2.0
color = Color( 0.992157, 0.960784, 0.815686, 1 )
range_item_cull_mask = 2
shadow_buffer_size = 1024
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" parent="World/Entities/Player/Node2D3/Light2D" index="0"]
anims/Flicker = SubResource( 1 )

[node name="Stronghold" parent="World/Entities" instance=ExtResource( 13 )]
position = Vector2( 212.052, 311.881 )

[node name="Loot" parent="World/Entities" instance=ExtResource( 14 )]
position = Vector2( 221.637, 155.091 )
item_path = ExtResource( 15 )

[node name="GUI" type="CanvasLayer" parent="."]
editor/display_folded = true
script = ExtResource( 16 )

[node name="HUD" type="Control" parent="GUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 470.0
mouse_filter = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnGenMap" type="Button" parent="GUI/HUD"]
margin_left = 587.054
margin_right = 697.054
margin_bottom = 40.0
mouse_filter = 1
text = "Generate"

[node name="TouchScreenButton" type="TouchScreenButton" parent="GUI/HUD"]
position = Vector2( 604.71, 365.46 )
scale = Vector2( 0.627024, 0.627024 )
normal = ExtResource( 18 )
action = "attack"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="GUI/HUD"]
position = Vector2( 4.09964, 373.16 )
scale = Vector2( 0.386395, 0.386395 )
normal = ExtResource( 18 )
action = "move_left"
visibility_mode = 1

[node name="TouchScreenButton5" type="TouchScreenButton" parent="GUI/HUD"]
position = Vector2( 108.308, 373.16 )
scale = Vector2( 0.386395, 0.386395 )
normal = ExtResource( 18 )
action = "move_right"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="GUI/HUD"]
position = Vector2( 54.9205, 331.066 )
scale = Vector2( 0.386395, 0.386395 )
normal = ExtResource( 18 )
action = "move_up"
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="GUI/HUD"]
position = Vector2( 58.0806, 418.088 )
scale = Vector2( 0.386395, 0.386395 )
normal = ExtResource( 18 )
action = "move_down"
visibility_mode = 1

[node name="HealthBar" type="ProgressBar" parent="GUI/HUD"]
margin_left = 6.0
margin_top = 5.84857
margin_right = 172.0
margin_bottom = 26.8486
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 75.0
rounded = true

[node name="Inventory" parent="GUI" instance=ExtResource( 19 )]
visible = false
mouse_filter = 2

[node name="Character" type="Control" parent="GUI"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 710.0
margin_bottom = 473.0
mouse_filter = 2
script = ExtResource( 20 )

[node name="StatList" type="Tree" parent="GUI/Character"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0

[connection signal="chunk_changed" from="World" to="World" method="_on_chunk_changed"]
[connection signal="stats_updated" from="World/Entities/Player/Entity" to="GUI/Character" method="_on_player_stats_updated"]
[connection signal="button_up" from="GUI/HUD/BtnGenMap" to="World" method="_on_BtnGenMap_button_up"]

[editable path="World/Entities/Player"]

[editable path="World/Entities/Player/Entity"]

[editable path="World/Entities/Player/Node2D2"]

[editable path="World/Entities/Player/Node2D3"]
